--- a/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
@@ -1,9 +1,13 @@
-﻿<div class="right_col" role="main">
+﻿@{
+    ViewBag.Title = "Bienvenido";    
+}
+
+<div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
                 <h3>thyssenkrupp Materials de M&eacute;xico S.A de C.V.</h3>
-            </div>          
+            </div>
         </div>
 
         <div class="clearfix"></div>
@@ -26,7 +30,7 @@
                     <div class="x_content">
                         <div class="bs-example" data-example-id="simple-jumbotron">
                             <p>
-                                A través de la mejora continua de todos nuestros procesos, servicios, administración y nuestros recursos humanos, queremos ofrecer a la industria automotriz, productos y servicios con la máxima calidad en tiempo oportuno y así lograr el liderazgo en el mercado nacional.
+                                Somos un centro de servicios especializados para acero y aluminio ofreciendo valor agregado a nuestros clientes, empleados y accionistas. <b>Creando un mundo en el cual los recursos son usados de la mejor manera, conjuntamente del &eacute;xito y de un futuro sustentable.</b>
                             </p>
                         </div>
                     </div>
@@ -49,7 +53,7 @@
                     <div class="x_content">
                         <div class="bs-example" data-example-id="simple-jumbotron">
                             <p>
-                                Lograr el liderazgo a nivel nacional de la industria automotriz a través del compromiso personal y la responsabilidad de todos los que integramos thyssenkrupp Materials de México.
+                                Diversificar y crecer el portafolio de negocio para 2025, manteniendo el liderazgo como centro de servicio  a trav&eacute;s de la cadena de suministro ofreciendo a nuestros clientes de la industria automotriz y cualquier sector industrial servicios integrales, para ser la mejor opci&oacute;n en el pa&iacute;s.
                             </p>
                         </div>
                     </div>
@@ -72,7 +76,13 @@
                     <div class="x_content">
                         <div class="bs-example" data-example-id="simple-jumbotron">
                             <p>
-                                Los valores más importantes en thyssenkrupp Materials de México deben permitir el desarrollo lleno del potencial de nuestros empleados y mantener un buen ambiente de trabajo poniendo énfasis en: SINCERIDAD, INTEGRIDAD, FIABILIDAD y CREDIBILIDAD.
+                                El cumplimiento de nuestras metas estrat&eacute;gicas es resultado del apego a nuestros valores corporativos:
+                                <ul>
+                                    <li>FIABILIDAD</li>
+                                    <li>SINCERIDAD</li>
+                                    <li>CREDIBILIDAD</li>
+                                    <li>INTEGRIDAD</li>
+                                </ul>
                             </p>
                         </div>
                     </div>
