--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/GraficaTPM.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/GraficaTPM.cshtml
@@ -146,6 +146,26 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-12 col-sm-12  ">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Solicitudes por Grupo</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            @*Utilizado para mover a la derecha los iconos del card*@
+                            <span style="visibility:hidden">_______</span>
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content table-responsive">
+
+                        <div id="graficaGrupos" style="height:500px;"></div>
+
+                    </div>
+                </div>
+            </div>
             <div class="col-md-12 col-sm-12">
                 <div class="x_panel">
                     <div class="x_title">
@@ -218,7 +238,7 @@
                 CargarGraficaCorregidos();
                 CargarGraficaDetectadosVsCorregidos();
                 CargarGraficaScoreMensual();
-                var chartDom = document.getElementById('graficaUrgenciaEstatus');
+                CargarGraficaCantidadGrupo();
             }
         }
 
@@ -787,6 +807,121 @@
             //option && myChart.setOption(option);
         }
 
+        function CargarGraficaCantidadGrupo() {
+
+            var inicial = $('#fecha_inicial').val();
+            var final = $('#fecha_final').val();
+            var chartDom = document.getElementById('graficaGrupos');
+            var graficaDepartamentos = echarts.init(chartDom);
+            var option;
+
+            $.ajax({
+                type: "post",
+                async: true,
+                url: '/ECharts/GetChartCantidadPorGrupo',
+                dataType: "json",
+                data: { fecha_inicial: inicial, fecha_final: final },
+                success: function (result) {
+
+                    try {
+                        console.log(result);
+
+                        var objsx = [];
+                        var objsy = [];
+
+                        for (var i = 0; i < result.name.length; i++) {
+                            objsx[i] = JSON.stringify(result.name[i]);//Receiving strings as JSON
+                        }
+
+                        var graficaGrupos = echarts.init(document.getElementById('graficaGrupos'));
+                        option = {
+                            title: {
+                                text: 'Solicitudes por Grupo',
+                                subtext: 'Información del ' + inicial + ' al ' + final
+                            },
+                            tooltip: {
+                                trigger: 'axis'
+                            },
+                            legend: {
+                                orient: 'horizontal',
+                                top: 'top'
+                            },
+                            toolbox: {
+                                show: true,
+                                feature: {
+                                    magicType: {
+                                        show: true,
+                                        title: {
+                                            line: 'Lineas',
+                                            bar: 'Barras',
+                                            stack: 'Stack',
+                                            tiled: 'Tiled'
+                                        },
+                                        type: ['line', 'bar', 'stack', 'tiled']
+                                    },
+                                    dataView: {
+                                        show: true,
+                                        title: "Datos",
+                                        lang: [
+                                            "Datos",
+                                            "Cerrar",
+                                            "Actualizar",
+                                        ],
+                                        readOnly: false
+                                    },
+                                    restore: {
+                                        show: true,
+                                        title: "Restablecer"
+                                    },
+                                    saveAsImage: {
+                                        show: true,
+                                        title: "Guardar"
+                                    }
+                                }
+                            },
+                            calculable: true,
+                            dataset: {
+                                dimensions: result.name,
+                                source: result.num
+                            },
+                            xAxis: { type: 'category', axisLabel: { interval: 0, rotate: 30 } },
+                            yAxis: {},
+                            grid: {//Drawing grid in Cartesian coordinate system
+                                left: "5%",//The distance from the grid component to the left of the container.
+                                right: "5%",
+                                bottom: "20%" //
+                            },
+                            //una serie por cada valor en dimensions
+                            series: [{ type: 'bar' }, { type: 'bar' }, { type: 'bar' }, { type: 'bar' }]
+                        };
+
+                        // Use the configuration items and data just specified to display the chart.
+                        graficaGrupos.setOption(option, true);
+
+                    } catch (error) {
+                        Swal.fire({
+                            icon: 'error',
+                            text: 'Ocurrió un error al obtener la información de la gráfica "Solicitudes por Departamento": ' + error,
+                        })
+
+                    }
+
+                },
+                error: function (errorMsg) {
+                    //Execute this function when the request fails
+                    Swal.fire({
+                        icon: 'error',
+                        text: 'Ocurrió un error al obtener la información.',
+                    })
+                    graficaGrupos.hideLoading();
+                }
+
+            });
+
+
+            //option && myChart.setOption(option);
+        }
+
 
         window.onload = function () {
             clicMenu(1);
@@ -799,6 +934,7 @@
         var graficaCorregidos = echarts.init(document.getElementById('graficaCorregidos'));
         var graficaDetectadasVSCorregidasArea = echarts.init(document.getElementById('graficaDetectadasVSCorregidasArea'));
         var scoreMensual = echarts.init(document.getElementById('scoreMensual'));
+        var graficaGrupos = echarts.init(document.getElementById('graficaGrupos'));
 
         window.onresize = function () {
             grafica1.resize();
@@ -806,6 +942,7 @@
             graficaCorregidos.resize();
             graficaDetectadasVSCorregidasArea.resize();
             scoreMensual.resize();
+            graficaGrupos.resize();
         };
 
     </script>
