--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -22,6 +22,11 @@
     <!-- Custom Theme Style -->
     <link href="@Url.Content("~/Content/build/css/custom.css")" rel="stylesheet">
 
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9040"))
+    {
+        <!-- Toastr -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css" rel="stylesheet">
+    }
     <style>
         table.dataTable thead {
             background-color: #0094ff;
@@ -349,7 +354,7 @@
                                                 @if (User.IsInRole(TipoRoles.OT_ASIGNACION))
                                                 {
                                                     <h3>Asignaci&oacute;n</h3>
-                                                    <li class="@(ViewBag.SegundoNivel == "ListadoAsignacionPendientes" ? "current-page" : null )"><a href="@Url.Action("ListadoAsignacionPendientes", "OrdenesTrabajo")">Pendientes por asignar</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "ListadoAsignacionPendientes" ? "current-page" : null )"><a href="@Url.Action("ListadoAsignacionPendientes", "OrdenesTrabajo")">Pendientes por Asignar</a></li>
                                                     <li class="@(ViewBag.SegundoNivel == "ListadoAsignacionAsignadas" ? "current-page" : null )"><a href="@Url.Action("ListadoAsignacionAsignadas", "OrdenesTrabajo")">Solicitudes Asignadas</a></li>
                                                 }
                                                 @if (User.IsInRole(TipoRoles.OT_RESPONSABLE))
@@ -371,6 +376,11 @@
                                                 {
                                                     <h3>Cat&aacute;logos</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "OT_Grupos" ? "current-page" : null )"><a href="@Url.Action("Index", "OT_Grupos")">Grupos</a></li>
+                                                }
+                                                @if (User.IsInRole(TipoRoles.ADMIN))
+                                                {
+                                                    <h3>Cat&aacute;logos Admin</h3>
+                                                    <li class="@(ViewBag.SegundoNivel == "OT_rel_depto_aplica_linea" ? "current-page" : null )"><a href="@Url.Action("Index", "OT_rel_depto_aplica_linea")">Rel Deptos l&iacute;nea</a></li>
                                                 }
                                             </ul>
                                         </li>
@@ -500,5 +510,35 @@
     @Scripts.Render(Url.Content("~/Content/vendors/jquery_block_ui/jquery.blockUI.js"))
 
     @Scripts.Render(Url.Content("~/Scripts/site.js"))
+
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9040"))
+    {
+        <!-- toastr -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
+        <script>
+            $(document).ready(function () {
+
+                toastr.options = {
+                    "closeButton": true,
+                    "debug": false,
+                    "positionClass": "toast-bottom-right",
+                    "onclick": null,
+                    "fadeIn": 300,
+                    "fadeOut": 1000,
+                    "timeOut": 1200000,
+                    "extendedTimeOut": 1200000
+                }
+                toastr.options.tapToDismiss = false
+
+                toastr.info("Este Portal es de Calidad y su único fin es probar la funcionalidad del mismo. Una vez aprobado se liberará en Productivo.", "¡Aviso!").css(({
+                    width: "500px",
+                    "max-width": "500px"
+                }))
+            });
+
+        </script>
+    }
+
 </body>
 </html>
