2022-04-29 Se sube versión para pruebas de OT

--- a/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/GraficaTPM.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/OrdenesTrabajo/GraficaTPM.cshtml
@@ -50,13 +50,13 @@
                                 <div class="col-md-3 col-sm-3">
                                     <input type="date" class="form-control" name="fecha_final" id="fecha_final" value="@final">
                                 </div>
-                                <div class="col-md-2 col-sm-11">
+                                <div class="col-md-2 col-sm-2">
                                     <a href="@Url.Action("GraficaTPM", ViewBag.ControllerName)" class="btn btn-warning" title="Restablecer">
                                         <i class="fa fa-refresh"></i> Restablecer
                                     </a>
                                 </div>
                                 <div class="col-md-1 col-sm-1">
-                                    <input type="button" value="Actualizar" onclick="actualizaValores()" class="btn btn-info float-right" />
+                                    <input type="button" value="Actualizar" onclick="actualizaValores()" class="btn btn-info" />
                                 </div>
                             </div>
 
