2022-05-03 Se agrega modificación a formulario de empleados.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -382,6 +382,9 @@
                                                     <h3>Cat&aacute;logos Admin</h3>
                                                     <li class="@(ViewBag.SegundoNivel == "OT_rel_depto_aplica_linea" ? "current-page" : null )"><a href="@Url.Action("Index", "OT_rel_depto_aplica_linea")">Rel Deptos l&iacute;nea</a></li>
                                                 }
+                                                <h3>Manual de Usuario</h3>
+                                                <li class="@(ViewBag.SegundoNivel == "OT_manual" ? "current-page" : null )"><a href="@Url.Action("ManualUsuario", "OrdenesTrabajo")" target="_blank">Manual de Usuarios</a></li>
+
                                             </ul>
                                         </li>
 
