--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
@@ -84,6 +84,10 @@
                                         <td>@Html.DisplayFor(model => model.plantas.descripcion)</td>
                                     </tr>
                                     <tr>
+                                        <th>Departamento</th>
+                                        <td>@Html.DisplayFor(model => model.Area.descripcion)</td>
+                                    </tr>
+                                    <tr>
                                         <th>Puesto</th>
                                         <td>@Html.DisplayFor(model => model.puesto1.descripcion)</td>
                                     </tr>
