--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
@@ -54,7 +54,12 @@
                             @Html.AntiForgeryToken()
                             <h4>Datos del Empleado</h4>
                             <hr />
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
+                            if (!Html.ViewData.ModelState.IsValid)
+                            {
+                                <div class="alert alert-danger" role="alert">
+                                    @Html.ValidationSummary("", new { @class = "text-white" })
+                                </div>
+                            }
                             @Html.HiddenFor(model => model.id)
                             @Html.HiddenFor(model => model.clave)
                             @Html.HiddenFor(model => model.activo)
@@ -139,13 +144,16 @@
                                     @Html.ValidationMessageFor(model => model.ingresoFecha, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            <div class="item form-group">
-                                @Html.LabelFor(model => model.bajaFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
-                                <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.bajaFecha, new { htmlAttributes = new { @class = "form-control" } })
-                                    @Html.ValidationMessageFor(model => model.bajaFecha, "", new { @class = "text-danger" })
+                            if (Model.activo == false)
+                            {
+                                <div class="item form-group">
+                                    @Html.LabelFor(model => model.bajaFecha, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                    <div class="col-md-6 col-sm-6 ">
+                                        @Html.EditorFor(model => model.bajaFecha, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.bajaFecha, "", new { @class = "text-danger" })
+                                    </div>
                                 </div>
-                            </div>
+                            }
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.planta_clave, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
@@ -158,7 +166,8 @@
                             <div class="item form-group">
                                 <label class="col-form-label col-md-3 col-sm-3 label-align">&Aacute;rea/Departamento</label>
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("areaClave", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.DropDownList("id_area", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.ValidationMessageFor(model => model.id_area, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="item form-group">
