2022-05-04 Se modifica premiso de Reportes de Producción para visualizar registros

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -115,11 +115,13 @@
                                         <li class="@(ViewBag.PrimerNivel == "bitacoras_produccion" ? "active" : null )">
                                             <a><i class="fa fa-tasks"></i> Producci&oacute;n<span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu">
-
+                                                @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO) || User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REPORTE))
+                                                {
+                                                    <li class="@(ViewBag.SegundoNivel == "produccion_registros" ? "current-page" : null )"><a href="@Url.Action("Index", "ProduccionRegistros")">Bit&aacute;cora</a></li>                                                 
+                                                }
                                                 @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
                                                 {
-                                                    <li class="@(ViewBag.SegundoNivel == "produccion_registros" ? "current-page" : null )"><a href="@Url.Action("Index", "ProduccionRegistros")">Bit&aacute;cora</a></li>
-                                                    <li class="@(ViewBag.SegundoNivel == "produccion_respaldo" ? "current-page" : null )"><a href="@Url.Action("Respaldo", "ProduccionRegistros")">Cargar Respaldo</a></li>
+                                                     <li class="@(ViewBag.SegundoNivel == "produccion_respaldo" ? "current-page" : null )"><a href="@Url.Action("Respaldo", "ProduccionRegistros")">Cargar Respaldo</a></li>
 
                                                 }
                                                 @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REPORTE))
