--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradasDetails.cshtml
@@ -504,10 +504,13 @@
                         }
                         <div class="item form-group">
                             <div class="col-md-12 col-sm-12 offset-md-12">
-                                <a href="@Url.Action("DatosEntradas", ViewBag.ControllerName, new { id = Model.id})" class="btn btn-success btm-sm float-md-right" title="Editar">
-                                    <i class="fa fa-pencil-square-o"></i> Editar
-                                </a>
-                            </div>
+                                @if (User.IsInRole(Clases.Util.TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                {
+                                    <a href="@Url.Action("DatosEntradas", ViewBag.ControllerName, new { id = Model.id })" class="btn btn-success btm-sm float-md-right" title="Editar">
+                                        <i class="fa fa-pencil-square-o"></i> Editar
+                                    </a>
+                                    }
+                                </div>
                         </div>
                     </div>
                 </div>
