--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Portal_2_0.Models.produccion_registros>
+@using Clases.Util;
 
 @{
     ViewBag.Title = "Registro de producción";
@@ -42,6 +43,7 @@
             color: #fffdf0;
             font-weight: bolder;
         }
+
         .fondo_temporal > td {
             background-color: #ff8909;
             color: #fffdf0;
@@ -116,8 +118,11 @@
                                         {
                                             <input type="hidden" name="linea" value="@filtroLinea" id="hidden_linea" />
                                             <input type="hidden" name="planta" value="@filtroPlanta" id="hidden_planta" />
+                                            if(User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                            {
+                                                <input type="button" style="display:none" value="Crear nuevo registro" class="btn btn-success float-left" id="crearFormButton" />
+                                            }
 
-                                            <input type="button" style="display:none" value="Crear nuevo registro" class="btn btn-success float-left" id="crearFormButton" />
                                         }
                                     </div>
                                     <hr />
@@ -162,47 +167,52 @@
                                                     {
 
                                                         <tr class="@(item.activo.HasValue && !item.activo.Value ? "fondo_rojo" : item.sap_platina.Contains("TEMPORAL") ? "fondo_temporal": "" )">
-                                                        
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.sap_platina)
-                                                                </td>
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.sap_rollo)
-                                                                </td>
-                                                                <td>
-                                                                    @item.fecha
-                                                                </td>
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.plantas.descripcion)
-                                                                </td>
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.produccion_datos_entrada.orden_sap)
-                                                                </td>
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.produccion_lineas.linea)
-                                                                </td>
-                                                                <td>
-                                                                    @item.produccion_operadores.empleados.ConcatNombre
-                                                                </td>
-                                                                <td>
-                                                                    @item.produccion_supervisores.empleados.ConcatNombre
-                                                                </td>
-                                                                <td>
-                                                                    @Html.DisplayFor(modelItem => item.produccion_turnos.descripcion)
-                                                                </td>
 
-                                                                <td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.sap_platina)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.sap_rollo)
+                                                            </td>
+                                                            <td>
+                                                                @item.fecha
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.plantas.descripcion)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.produccion_datos_entrada.orden_sap)
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.produccion_lineas.linea)
+                                                            </td>
+                                                            <td>
+                                                                @item.produccion_operadores.empleados.ConcatNombre
+                                                            </td>
+                                                            <td>
+                                                                @item.produccion_supervisores.empleados.ConcatNombre
+                                                            </td>
+                                                            <td>
+                                                                @Html.DisplayFor(modelItem => item.produccion_turnos.descripcion)
+                                                            </td>
+
+                                                            <td>
+                                                                @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                                                {
                                                                     <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-secondary btm-sm" title="Configuración">
                                                                         <i class="fa fa-gears"></i>
                                                                     </a>
                                                                     <a href="@Url.Action("DatosEntradas", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
                                                                         <i class="fa fa-pencil-square-o"></i>
                                                                     </a>
-                                                                    <a href="@Url.Action("DatosEntradasDetails", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                                        <i class="fa fa-eye"></i>
-                                                                    </a>
+                                                                }
 
-                                                                    @if (item.activo.HasValue && !item.activo.Value)
+                                                                <a href="@Url.Action("DatosEntradasDetails", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                                    <i class="fa fa-eye"></i>
+                                                                </a>
+                                                                @if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                                                {
+                                                                    if (item.activo.HasValue && !item.activo.Value)
                                                                     {
                                                                         <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" title="Habilitar">
                                                                             <i class="fa fa-check"></i>
@@ -214,11 +224,13 @@
                                                                             <i class="fa fa-trash-o"></i>
                                                                         </a>
                                                                     }
-                                                                </td>
-                                                            </tr>
-                                                        }
+                                                                }
 
-                                                    </tbody>
+                                                            </td>
+                                                        </tr>
+                                                    }
+
+                                                </tbody>
                                             </table>
                                         }
                                         else
