--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
@@ -77,7 +77,7 @@
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.C8ID, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.C8ID, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.C8ID, "", new { @class = "text-danger" })
                                 </div>
                             </div>
@@ -105,7 +105,7 @@
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.correo, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.EditorFor(model => model.correo, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                     @Html.ValidationMessageFor(model => model.correo, "", new { @class = "text-danger" })
                                 </div>
                             </div>
