--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Index.cshtml
@@ -7,6 +7,21 @@
     ViewBag.ControllerName = "Empleados";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
+
+    //obtiene los filtros
+    Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
+
+    string nombre = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["nombre"] != null)
+    {
+        nombre = paginacionFiltros.ValoresQueryString["nombre"].ToString();
+    }
+
+    string num_empleado = string.Empty;
+    if (paginacionFiltros.ValoresQueryString["num_empleado"] != null)
+    {
+        num_empleado = paginacionFiltros.ValoresQueryString["num_empleado"].ToString();
+    }
 }
 
 @section estilos
@@ -16,8 +31,11 @@
 
     <!-- SweetAlert2 -->
     <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
-        
-    }
+    <!-- Select2 -->
+    <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+
+}
 
 @*Para SweetAlert*@
 @if (mensajeAlerta != null)
@@ -25,7 +43,6 @@
     <input type="hidden" value="@mensajeAlerta.Mensaje" id="mensajeAlert" />
     <input type="hidden" value="@mensajeAlerta.getTipoMensaje()" id="mensajeAlertTipo" />
 }
-
 
 
 
@@ -58,12 +75,40 @@
                             <div class="col-sm-12">
                                 <div class="card-box table-responsive">
                                     <div class="form-group">
+                                        @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
+                                        {
+
+                                        <div class="form-group row ">
+                                            <label class="control-label col-md-1 col-sm-1" for="nombre" style="text-align:right">Nombre:</label>
+                                            <div class="col-md-3 col-sm-3 ">
+                                                <input type="text" id="nombre" name="nombre" class="form-control" value="@nombre" autocomplete="off" />
+                                            </div>
+                                            <label class="control-label col-md-1 col-sm-1" for="nombre_equipo" style="text-align:right">Planta:</label>
+                                            <div class="col-md-2 col-sm-2 ">
+                                                @Html.DropDownList("planta_clave", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                            </div>
+                                            <label class="control-label col-md-1 col-sm-1" for="num_empleado" style="text-align:right">N&uacute;m. Empleado:</label>
+                                            <div class="col-md-2 col-sm-2 ">
+                                                <input type="text" id="num_empleado" name="num_empleado" class="form-control" value="@num_empleado" autocomplete="off" />
+                                            </div>
+                                            <div class="col-md-1 col-sm-1">
+                                                <a href="@Url.Action( "Index", ViewBag.ControllerName)" class="btn btn-warning">
+                                                    <i class="fa fa-refresh"></i>
+                                                </a>
+                                            </div>
+                                            <div class="col-md-1 col-sm-1">
+                                                <input type="submit" value="Buscar" class="btn btn-info float-right" />
+                                            </div>
+                                        </div>
+
+                                        }
+                                        <hr />
                                         <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
                                             <i class="fa fa-plus-square"></i>
                                             Crear nuevo
                                         </a>
                                     </div>
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
 
@@ -71,52 +116,29 @@
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.C8ID)
+                                                    Planta
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.nombre)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.apellido1)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.apellido2)
+                                                    @Html.DisplayNameFor(model => model.C8ID)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.correo)
                                                 </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.nueva_fecha_nacimiento)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.telefono)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.extension)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.celular)
-                                                </th>
 
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.ingresoFecha)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.bajaFecha)
-                                                </th>
-                                                <th>
-                                                    Planta
-                                                </th>
-                                                <th>
+
+                                                @*<th>
                                                     Departamento
                                                 </th>
                                                 <th>
                                                     Puesto
-                                                </th>
+                                                </th>*@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
-                                                <th></th>
+                                                <th>Acciones</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -127,48 +149,25 @@
                                                     @Html.DisplayFor(modelItem => item.numeroEmpleado)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayFor(modelItem => item.C8ID)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.nombre)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.apellido1)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.apellido2)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.correo)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.nueva_fecha_nacimiento)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.telefono)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.extension)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.celular)
-                                                </th>
-
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.ingresoFecha)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.bajaFecha)
-                                                </th>
-                                                <th>
                                                     @Html.DisplayFor(modelItem => item.plantas.descripcion)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayFor(modelItem => item.ConcatNombre)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayFor(modelItem => item.C8ID)
+                                                </th>
+
+                                                <th>
+                                                    @Html.DisplayFor(modelItem => item.correo)
+                                                </th>
+
+                                                @*<th>
                                                     @Html.DisplayFor(modelItem => item.Area.descripcion)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayFor(modelItem => item.puesto1.descripcion)
-                                                </th>
+                                                </th>*@
                                                 <th>
                                                     @if (item.activo.HasValue && item.activo.Value)
                                                     {
@@ -180,10 +179,10 @@
                                                     }
                                                 </th>
                                                 <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
                                                         <i class="fa fa-pencil-square-o"></i>
                                                     </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
+                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btn-sm" title="Detalles">
                                                         <i class="fa fa-info-circle"></i>
                                                     </a>
 
@@ -191,23 +190,26 @@
                                                     {
                                                         if (!item.activo.Value)
                                                         {
-                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
+                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
                                                                 <i class="fa fa-check"></i>
                                                             </a>
                                                         }
                                                         else
                                                         {
-                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger" title="Dar de Baja">
+                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger btn-sm" title="Dar de Baja">
                                                                 <i class="fa fa-times"></i>
                                                             </a>
                                                         }
                                                     }
                                                     else
                                                     {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning" s title="Habilitar">
+                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
                                                             <i class="fa fa-check"></i>
                                                         </a>
                                                     }
+                                                    <a href="@Url.Action("CrearMatriz", "IT_matriz_requerimientos", new { id = item.id})" class="btn btn-primary btn-sm" title="Solicitud de Usuarios">
+                                                        <i class="fa fa-users"></i>
+                                                    </a>
 
                                                 </td>
                                             </tr>
@@ -215,6 +217,13 @@
                                         </tbody>
                                     </table>
                                 </div>
+                                <br />
+                                @if (Model.Count() > 0)
+                                {
+                                    <nav id="nav_paginacion" aria-label="...">
+                                        @{Html.RenderPartial("_Paginacion", Model);}
+                                    </nav>
+                                }
                             </div>
                         </div>
                     </div>
@@ -228,10 +237,29 @@
     <!-- SweetAlert2 -->
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
-
+    @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     @Scripts.Render("~/bundles/dataTables_js")
 
     <script>
+        $(document).ready(function () {
+
+            //inicializa los data table
+            var tabla = $('#datatable_1').DataTable({
+                "paging": false,
+                "ordering": false,
+                "searching": false,
+                "scrollX": true,
+                "info": false
+            });
+
+            // Initialize Select2 Elements (debe ir después de asignar el valor)
+            $('.select2bs4').select2({
+                theme: 'bootstrap4'
+            })
+
+        });
+
+
         //agranda el tamaño de la barra
         window.onload = function () {
             document.getElementById('menu_toggle').click();
