--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoUsuarios.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewBag.Title = "Listado de Empleados";
     ViewBag.PrimerNivel = "recursos_humanos";
-    ViewBag.SegundoNivel = "empleados";
-    ViewBag.ControllerName = "Empleados";
+    ViewBag.SegundoNivel = "ListadoUsuarios";
+    ViewBag.ControllerName = "IT_matriz_requerimientos";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
 
@@ -103,15 +103,12 @@
 
                                         }
                                         <hr />
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>
+                                       
                                     </div>
                                     <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
-
+                                                <th>Acciones</th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.numeroEmpleado)
                                                 </th>
@@ -130,21 +127,29 @@
 
 
                                                 @*<th>
-                                                    Departamento
-                                                </th>
-                                                <th>
-                                                    Puesto
-                                                </th>*@
+            Departamento
+        </th>
+        <th>
+            Puesto
+        </th>*@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.activo)
                                                 </th>
-                                                <th>Acciones</th>
+
                                             </tr>
                                         </thead>
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
                                             <tr style="@(item.activo == false ? "color:red" :"" )">
+                                                <td>
+                                                    <a href="@Url.Action("Details", "empleados", new { id = item.id})" class="btn btn-info btn-sm" title="Detalles de empleado">
+                                                        <i class="fa fa-info-circle"></i>
+                                                    </a>
+                                                    <a href="@Url.Action("CrearMatriz",ViewBag.ControllerName, new { id = item.id})" class="btn btn-primary btn-sm" title="Solicitud de Usuarios">
+                                                        <i class="fa fa-users"></i>
+                                                    </a>
+                                                </td>
                                                 <th>
                                                     @Html.DisplayFor(modelItem => item.numeroEmpleado)
                                                 </th>
@@ -163,11 +168,11 @@
                                                 </th>
 
                                                 @*<th>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayFor(modelItem => item.puesto1.descripcion)
-                                                </th>*@
+            @Html.DisplayFor(modelItem => item.Area.descripcion)
+        </th>
+        <th>
+            @Html.DisplayFor(modelItem => item.puesto1.descripcion)
+        </th>*@
                                                 <th>
                                                     @if (item.activo.HasValue && item.activo.Value)
                                                     {
@@ -178,38 +183,7 @@
                                                         <span>Inactivo</span>
                                                     }
                                                 </th>
-                                                <td>
-                                                    <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btn-sm" title="Editar">
-                                                        <i class="fa fa-pencil-square-o"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btn-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
 
-                                                    @if (item.activo.HasValue)
-                                                    {
-                                                        if (!item.activo.Value)
-                                                        {
-                                                            <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
-                                                                <i class="fa fa-check"></i>
-                                                            </a>
-                                                        }
-                                                        else
-                                                        {
-                                                            <a href="@Url.Action("Disable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-danger btn-sm" title="Dar de Baja">
-                                                                <i class="fa fa-times"></i>
-                                                            </a>
-                                                        }
-                                                    }
-                                                    else
-                                                    {
-                                                        <a href="@Url.Action("Enable", ViewBag.ControllerName, new { id = item.id })" class="btn btn-warning btn-sm" title="Habilitar">
-                                                            <i class="fa fa-check"></i>
-                                                        </a>
-                                                    }
-                                                  
-
-                                                </td>
                                             </tr>
                                             }
                                         </tbody>
