--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/DatosEntradas.cshtml
@@ -585,7 +585,7 @@
                         Peso Real Pieza Neto
                     </label>
                     <div class="col-md-7">
-                        <input type="text" id="peso_manual" class="form-control col-md-12" value="@Model.produccion_datos_entrada.peso_real_pieza_neto">
+                        <input type="text" id="peso_manual" class="form-control col-md-12" value="@Model.produccion_datos_entrada.peso_real_pieza_neto" autocomplete="off">
                         <span id="error_peso" class="text-danger">Ingrese un número válido</span>
                     </div>
                 </div>
